DAO working implementation is complete; JUnits pending